--- a/interior_quotation_system/src/styles/components/shop.scss
+++ b/interior_quotation_system/src/styles/components/shop.scss
@@ -105,6 +105,7 @@
           border: 2px solid #caab06;
           display: inline-block;
           border-radius: 50px;
+          cursor: pointer;
         }
       }
     }
