--- a/interior_quotation_system/src/styles/components/error.scss
+++ b/interior_quotation_system/src/styles/components/error.scss
@@ -21,6 +21,7 @@
             font-size: 30px;
             font-size: calc-rem-value(30);
             margin: 0 0 0.8em;
+            color: $dark-gray;
         }
 
         p {
