--- a/interior_quotation_system/src/styles/components/projectSingle.scss
+++ b/interior_quotation_system/src/styles/components/projectSingle.scss
@@ -48,6 +48,10 @@
             margin-bottom: 40px;
             .wpo-project-single-main-img{
                 margin-bottom: 30px;
+				
+				img {
+					margin: 20px 0;
+				}
 
                 .owl-controls {
                     width: 100%;
