--- a/interior_quotation_system/src/styles/components/blog.scss
+++ b/interior_quotation_system/src/styles/components/blog.scss
@@ -1,142 +1,340 @@
 @import "../variable/variable.scss";
 @import "../variable/mixin.scss";
 
-.wpo-blog-section {
-    padding-bottom: 90px;
-	background: $section-bg-color;
-	position: relative;
-	z-index: 1;
+.wpo-blog-pg-section {
 
-    @media(max-width:767px){
-        padding-bottom: 60px;
-    }
+	.container{
+		@media(min-width:1440px){
+          max-width: 1320px;
+		}
 
-	.vector-1{
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		z-index: -1;
+		.row {
+			width: 100%;
+		}
 	}
-	.vector-2{
-		position: absolute;
-		right: 0;
-		top: 0;
-		z-index: -1;
-	}
-    .wpo-blog-item{
-        margin-bottom: 30px;
-		padding: 20px;
-		background: $section-bg-color;
-		border: 1px solid $border-color;
+	.wpo-blog-content {
 
-        .wpo-blog-img{
-			overflow: hidden;
-			position: relative;
+		.post {
+			margin-bottom: 70px;
 
-			.thumb{
-				position: absolute;
-				left: 15px;
-				top: 15px;
-				padding: 7px 25px 6px;
-				background: $theme-primary-color;
-				color: $white;
-				text-transform: uppercase;
-				font-size: 14px;
-				
+			@include media-query(991px) {
+				margin-bottom: 50px;
 			}
-            img{
-                width: 100%;
-				-webkit-filter: grayscale(0);
-				-moz-filter: grayscale(0);
-				-o-filter: grayscale(0);
-				-ms-filter: grayscale(0);
-				filter: grayscale(0);
-				transition: all .3s;
-				transform: scale(1);
-				min-height: 260px;
-				object-fit: cover;
-            }
-        }
 
-		&:hover{
-			.wpo-blog-img{
-				img{
-					-webkit-filter: grayscale(100%);
-					-moz-filter: grayscale(100%);
-					-o-filter: grayscale(100%);
-					-ms-filter: grayscale(100%);
-					filter: grayscale(100%);
-					transform: scale(1.2);
-				}
+			@include media-query(767px) {
+				margin-bottom: 40px;
 			}
 		}
-    
-    
-        .wpo-blog-content {
-			padding-top: 20px;
-			ul{
-				list-style: none;
-				display: flex;
-				margin-bottom: 15px;
-				li{
-					color: $theme-primary-color-s2;
-					font-size: 16px;
-					&:first-child{
-						padding-right: 30px;
-						position: relative;
+	}
 
-						&:before{
-							position: absolute;
-							right: 10px;
-							top: 50%;
-							transform: translateY(-50%);
-							width: 6px;
-							height: 6px;
-							content: "";
-							background: $theme-primary-color;
-							border-radius: 50%;
-						}
-					}
-					a{
-						color: $theme-primary-color-s2;
+	.entry-meta {
+		list-style: none;
+		overflow: hidden;
+		margin: 35px 0;
 
-						&:hover{
-							color: $theme-primary-color;
-						}
-					}
-				}
-			}
-			h2{
-				font-size: 30px;
-				margin-bottom: 20px;
-				line-height: 36px;
-				font-weight: 600;
-				margin-top: 10px;
+		@include media-query(767px) {
+			margin: 25px 0;
+		}
 
-				@media(max-width:1400px){
-					font-size: 25px;
-					margin-bottom: 10px;
-				}
-				@media(max-width:1200px){
-					font-size: 22px;
-				}
+		ul{
+			list-style: none;
 
-				a{
-					color: $heading-color;
+			li {
+				font-weight: 500;
+				font-size: 14px;
+				font-size: calc-rem-value(14);
+				float: left;
+				text-transform: uppercase;
 
-					&:hover{
+				a {
+					color: #636893;
+		
+					&:hover {
 						color: $theme-primary-color;
 					}
 				}
+
+				i{
+					position: relative;
+					top: 2px;
+					margin-right: 3px;
+				}
+	
+				&+li{
+					margin-left: 20px;
+					padding-left: 20px;
+					position: relative;
+
+					&:before{
+						position: absolute;
+						left: 0;
+						top: 50%;
+						transform: translateY(-50%);
+						width: 7px;
+						height: 7px;
+						content: "";
+						background: $theme-primary-color;
+						border-radius: 50%;
+
+						@include media-query(440px) {
+							display: none;
+						}
+					}
+
+					@include media-query(440px) {
+						margin-left: 0;
+						padding-left: 0;
+					}
+				}
+	
+				@include media-query(767px) {
+					font-size: 12px;
+					font-size: calc-rem-value(12);
+				}
+	
+				@include media-query(440px) {
+					float: none;
+					display: block;
+					margin-bottom: 5px;
+				}
+	
+			}
+		}
+		
+	}
+
+	.post {
+		h3 {
+			font-size: 34px;
+			font-size: calc-rem-value(34);
+			line-height: 1.2em;
+			font-weight: 600;
+			margin: -0.27em 0 0.7em;
+			font-family: $heading-font;
+			font-weight: 600;
+
+			@include media-query(991px) {
+				font-size: 25px;
+				font-size: calc-rem-value(25);
 			}
 
-			p{
-				font-size: 18px;
-				color: $text-color;
+			@include media-query(767px) {
+				font-size: 22px;
+				font-size: calc-rem-value(22);
+			}
+		}
+
+		h3 a {
+			color: $heading-color;
+		}
+
+		h3 a:hover {
+			color: $theme-primary-color;
+		}
+
+		p {
+			margin-bottom: 1.5em;
+
+			@include media-query(991px) {
+				font-size: 16px;
+				font-size: calc-rem-value(16);
+			}
+		}
+
+		a.read-more{
+			text-decoration: underline;
+			color: $text-color;
+			text-transform: uppercase;
+			font-family: $heading-font;
+			font-size: 15px;
+			font-weight: 600;
+
+			&:hover{
+				color: $theme-primary-color;
+			}
+		}
+	}
+
+
+	.entry-media{
+		img{
+			width: 100%;
+		}
+	}
+
+	/*** format-standard ***/
+	.format-standard,
+	.format-quote {
+		background-color: $section-bg-color;
+		padding: 25px 35px 45px;
+
+		@include media-query(767px) {
+			padding: 25px 20px 45px;
+		}
+	}
+
+	.format-standard{
+		position: relative;
+
+		&:before{
+			position: absolute;
+			right: 0;
+			top: 0;
+			content: "\f10b";
+			font-family: "flaticon";
+			font-size: 90px;
+			line-height: 80px;
+			color: transparentize($theme-primary-color, .9);
+
+		}
+	}
+
+	/*** format-gallery ***/
+	.format-gallery {
+		position: relative;
+
+		.owl-controls {
+			width: 100%;
+			margin: 0;
+			position: absolute;
+			left: 0;
+			top: 50%;
+			@include translatingY();
+		}
+
+		.owl-nav [class*=owl-]:hover {
+			background: $theme-primary-color;
+			color: $white;
+		}
+
+		.owl-nav [class*=owl-] {
+			background: $white;
+			width: 50px;
+			height: 50px;
+			line-height: 58px;
+			padding: 0;
+			margin: 0;
+			border-radius: 50%;
+			color: $theme-primary-color;
+			@include transition-time(0.3s);
+			border: 0;
+
+			.fi{
+				&::before{
+					font-size: 20px;
+				}
+			}
+		}
+
+		.owl-nav .owl-prev,
+		.owl-nav .owl-next {
+			position: absolute;
+			top: 50%;
+			@include translatingY();
+		}
+
+		.owl-nav .owl-prev {
+			left: 15px;
+		}
+
+		.owl-nav .owl-next {
+			right: 15px;
+		}
+	}
+
+	/*** format-quote ***/
+	.format-quote {
+		text-align: center;
+		padding: 80px 60px;
+		position: relative;
+
+		@include media-query(767px) {
+			padding: 40px 20px;
+		}
+
+		p {
+			margin-bottom: 0;
+		}
+
+		&:before {
+			font-family: "Flaticon";
+			content: "\f120";
+			font-size: 250px;
+			font-size: calc-rem-value(250);
+			color: #ecf3fb;
+			margin-left: 0;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			@include center-by-translating();
+		}
+
+		h3,
+		p {
+			position: relative;
+		}
+	}
+
+	/*** format-video ***/
+	.format-video .video-holder {
+		position: relative;
+		text-align: center;
+
+		&:before {
+			content: "";
+			background-color: $theme-primary-color;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			@include transition-time(0.3s);
+			opacity: 0.2;
+		}
+
+		&:hover:before {
+			opacity: 0.5;
+		}
+
+		ul{
+			list-style: none;
+		}
+
+		button.wrap {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			@include center-by-translating();
+            width: 63px;
+            height: 63px;
+			line-height: 72px;
+			background: $white;
+			border-radius: 50%;
+			z-index: 1;
+			border: none;
+			
+			&:before{
+				position: absolute;
+				left: -12px;
+				top: -12px;
+				width: 140%;
+				height: 140%;
+				background: rgba(255,255,255,.3);
+				content: "";
+				-webkit-animation: save-the-date-pulse 1s infinite;
+				animation: save-the-date-pulse 1s infinite;
+				border-radius: 50%;
+				z-index: -1;
 			}
 
-        }
-    }
+		}
+
+		.fi:before {
+			font-size: 20px;
+			font-size: calc-rem-value(20);
+			color: $theme-primary-color;
+		}
+	}
 }
 
 
