--- a/interior_quotation_system/src/styles/pages/blogPage.scss
+++ b/interior_quotation_system/src/styles/pages/blogPage.scss
@@ -2,6 +2,17 @@
 @import "../variable/mixin.scss";
 
 
+.section-padding {
+    padding: 120px 0;
+
+    @include media-query( 991px ) {
+        padding: 90px 0;
+    }
+    @include media-query( 767px ) {
+        padding: 80px 0;
+    }
+}
+
 .wpo-section-title {
     margin-bottom: 60px;
 	text-align: center;
