--- a/interior_quotation_system/src/styles/components/header.scss
+++ b/interior_quotation_system/src/styles/components/header.scss
@@ -300,11 +300,11 @@
   align-items: center;
 }
 
-.site-header .header-right button {
-  padding: 0;
-  border: 0;
-  outline: 0;
-}
+// .site-header .header-right button {
+//   padding: 0;
+//   border: 0;
+//   outline: 0;
+// }
 .site-header .header-right button.btn {
   background: #333;
   width: 20px;
