--- a/interior_quotation_system/src/styles/components/tableBody.scss
+++ b/interior_quotation_system/src/styles/components/tableBody.scss
@@ -39,7 +39,7 @@
     }
 
     .size-item {
-        width: 5.2%;
+        width: 15.6%;
         border-radius: 1;
         text-align: center;
     }
@@ -99,10 +99,16 @@
   }
 
   .size-item {
-    width: 5.2%;
+    width: 15.6%;
     border: none; /* Loại bỏ border */
     padding: 0; /* Loại bỏ padding */
   }
+
+  // .size-item {
+  //   width: 5.2%;
+  //   border: none; /* Loại bỏ border */
+  //   padding: 0; /* Loại bỏ padding */
+  // }
   .delete-buttonn{
     padding: 0;
     background-color: #fcfcfc; /* Màu nền của nút */
@@ -246,10 +252,10 @@
   cursor: pointer;
 }
 .large-image {
-  max-width: 90%; /* Giới hạn chiều rộng tối đa của hình ảnh */
-  max-height: 90vh; /* Giới hạn chiều cao tối đa của hình ảnh với viewport height */
-  display: block; /* Đảm bảo hình ảnh được hiển thị chính giữa */
-  margin: 0 auto; /* Canh giữa hình ảnh theo chiều ngang */
+  max-width: 90%; 
+  max-height: 90vh; 
+  display: block; 
+  margin: 0 auto; 
 }
 
 .custom-select {
