add quotaton and product detal

--- a/interior_quotation_system/src/styles/components/shop.scss
+++ b/interior_quotation_system/src/styles/components/shop.scss
@@ -1,5 +1,6 @@
 .landing-page {
-  background: url("https://images.pexels.com/photos/189333/pexels-photo-189333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1") no-repeat center top / cover;
+  background: url("https://images.pexels.com/photos/189333/pexels-photo-189333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1")
+    no-repeat center top / cover;
   min-height: 450px;
   position: relative;
   display: flex;
@@ -62,6 +63,7 @@
     .product-detail {
       display: flex;
       flex-direction: column;
+      cursor: pointer;
 
       .image {
         width: 100%;
@@ -166,6 +168,7 @@
     .product-image {
       width: 40%;
       height: 100%;
+      border-radius: 12px;
     }
 
     .product-detail {
