--- a/interior_quotation_system/src/styles/pages/blogPage.scss
+++ b/interior_quotation_system/src/styles/pages/blogPage.scss
@@ -1,62 +1,57 @@
 @import "../variable/variable.scss";
 @import "../variable/mixin.scss";
 
-
 .section-padding {
     padding: 120px 0;
 
-    @include media-query( 991px ) {
+    @include media-query(991px) {
         padding: 90px 0;
     }
-    @include media-query( 767px ) {
+    @include media-query(767px) {
         padding: 80px 0;
     }
 }
 
 .wpo-section-title {
     margin-bottom: 60px;
-	text-align: center;
-	
-	@include media-query(767px) {
-		margin-bottom: 40px;
-	}
+    text-align: center;
 
-	span{
-		text-transform: uppercase;
-		font-size: 16px;
-		color: $theme-primary-color;
-		// font-family: $base-font;
-		display: block;
-		letter-spacing: 0.2em;
+    @include media-query(767px) {
+        margin-bottom: 40px;
+    }
 
-		@include media-query(575px) {
-			font-size: 15px;
-		}
-	}
+    span {
+        margin-top: 25px;
+        text-transform: uppercase;
+        font-size: 16px;
+        color: $theme-primary-color;
+        // font-family: $base-font;
+        display: block;
+        letter-spacing: 0.2em;
 
-	h2 {
-		font-weight: 600;
-		font-size: 50px;
-		line-height: 170.9%;
-		margin: 0;
-		position: relative;
-		// font-family: $heading-font;
-		color: $dark-gray;
-		display: inline-block;
-		position: relative;
+        @include media-query(575px) {
+            font-size: 15px;
+        }
+    }
 
+    h2 {
+        font-weight: 600;
+        font-size: 50px;
+        line-height: 170.9%;
+        margin: 0;
+        position: relative;
+        // font-family: $heading-font;
+        color: $dark-gray;
+        display: inline-block;
+        position: relative;
 
+        @include media-query(767px) {
+            font-size: 28px;
+            line-height: 55px;
+        }
+    }
 
-		@include media-query(767px) {
-			font-size: 28px;
-			line-height: 55px;
-		}
-
-
-	}
-
-	p{
-		font-size: 18px;
-	}
-
+    p {
+        font-size: 18px;
+    }
 }
