--- a/interior_quotation_system/src/pages/quotation/Form/styled.scss
+++ b/interior_quotation_system/src/pages/quotation/Form/styled.scss
@@ -64,7 +64,6 @@ p {
   height: 100%;
   gap: 1rem;
   overflow: auto;
-  border: 1px solid red;
 
   .title {
     font-size: 24px;
@@ -82,4 +81,9 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+.error-msg {
+  color:red
 }
