--- a/interior_quotation_system/src/styles/components/footer.scss
+++ b/interior_quotation_system/src/styles/components/footer.scss
@@ -218,10 +218,11 @@
         }
 
         ul {
+            padding: 0;
             li {
                 padding-bottom: 15px;
                 position: relative;
-                padding-left: 35px;
+                // padding-left: 35px;
                 color: $white;
                 font-size: 16px;
 
