update footer quotation

--- a/interior_quotation_system/src/pages/quotation/Form/styled.scss
+++ b/interior_quotation_system/src/pages/quotation/Form/styled.scss
@@ -1,6 +1,7 @@
 .form-container {
   overflow: auto;
-  height: 100vh;
+  // height: 100vh;
+  height: 100%;
   padding: 1rem;
   display: flex;
   align-items: center;
@@ -16,7 +17,7 @@
 }
 
 .content {
-  width: 90%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -24,6 +25,11 @@
 
   .content-detail {
     flex: 1;
+  }
+
+  h3 {
+    text-align: center;
+    color: #0D0845;
   }
 }
 
