--- a/interior_quotation_system/src/styles/components/pricing.scss
+++ b/interior_quotation_system/src/styles/components/pricing.scss
@@ -67,6 +67,8 @@
 					ul{
 						list-style: none;
 
+						height: 335px;
+
 						li{
 							color: $text-light-color;
 							padding-bottom: 15px;
