--- a/interior_quotation_system/src/styles/components/shop.scss
+++ b/interior_quotation_system/src/styles/components/shop.scss
@@ -66,7 +66,7 @@
       cursor: pointer;
 
       .image {
-        width: 100%;
+        width: 90%;
         height: 405px;
         object-fit: cover;
       }
@@ -124,6 +124,8 @@
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
+    flex-direction: row;
+
 
     .item {
       background-color: rgba(202, 171, 6, 0.1);
